Alignment fixed

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,120 +1,114 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.12/css/weather-icons.min.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
 
-
-.main{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 6rem;
-    min-height: 100vh;
-    background: conic-gradient(at center top, rgb(17, 24, 39), rgb(243, 244, 246), rgb(17, 24, 39));
+.main {
+  display: flex;
+  justify-content: center;
+  align-items:start;
+  padding: 6rem 1rem;
+  min-height: 100vh;
+  background: conic-gradient(at center top, rgb(17, 24, 39), rgb(243, 244, 246), rgb(17, 24, 39));
 }
 
-.widget{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 550px;
-    width: 500px;
-    transform: translate(-50%,-50%);
-    background: linear-gradient(to right, rgb(15, 23, 42), rgb(88, 28, 135), rgb(15, 23, 42));
-    cursor: pointer;
-    border-radius: 20px;
-    box-shadow: 0 27px 55px 0 rgba(0, 0, 0,0.3),0 17px 17px 0 rgba(0, 0, 0,0.3);
-    color: darkgrey;
+.widget {
+  width: 100%;
+  max-width: 500px;
+  background: linear-gradient(to right, rgb(15, 23, 42), rgb(88, 28, 135), rgb(15, 23, 42));
+  border-radius: 20px;
+  box-shadow: 0 27px 55px rgba(0, 0, 0, 0.3), 0 17px 17px rgba(0, 0, 0, 0.3);
+  color: darkgrey;
+  padding: 2rem;
+  position: relative;
 }
 
-.weatherLocation{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    padding: 2rem;
+.weatherLocation {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 
-.weatherLocation button{
-    background-color: linear-gradient(to right, rgb(56, 189, 248), rgb(103, 232, 249));
-    color: antiquewhite;
-    border: 1px solid transparent;
+.input_field {
+  flex: 1 1 auto;
+  min-width: 60%;
+  border-radius: 50px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
+  padding: 0 1rem;
 }
 
-.weatherLocation input:focus{
-    outline: 0 none;
+.search_button {
+  background: radial-gradient(rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
+  color: antiquewhite;
+  border: none;
+  padding: 0 1.5rem;
+  border-radius: 50px;
+  height: 40px;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
-.widget .weatherIcon{
-    height: 60%;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 100px;
-    color: wheat;
+.search_button:hover {
+  background: rgb(88, 28, 135);
 }
 
-.widget .weatherIcon i{
-    padding-top: 30px;
+.weatherLocation input:focus {
+  outline: none;
 }
 
-.input_field{
-    width: 60%;
-    border-radius: 50px;
-    border: none;
-    height: 40px;
-    margin-right: 20px;
-    text-align: center;
-    font-size: 20px;
+.icon_and_weatherInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  text-align: center;
+  margin-top: 2rem;
 }
 
-.search_button{
-    width: 80px;
-    height: 40px;
-    border-radius: 50px;
+.weatherIcon {
+  font-size: 100px;
+  color: wheat;
 }
 
-.icon_and_weatherInfo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    margin-top: 50px;
+.temperature {
+  font-size: 50px;
+  color: wheat;
 }
 
-.temperature{
-    font-size: 50px;
-    color: wheat;
+.weatherCondition {
+  font-size: 20px;
+  color: wheat;
+  margin-top: 0.5rem;
 }
 
-.place{
-    text-align: center;
-    font-size: 35px;
-    margin-top: 70px;
-    color: wheat;
+.place {
+  font-size: 28px;
+  color: wheat;
+  margin-top: 0.5rem;
 }
 
-.weatherCondition{
-    color: wheat;
-}
-.date{
-    text-align: center;
-    font-size: 20px;
-    margin-top: 20px;
-    color: wheat;
+.date {
+  font-size: 18px;
+  color: wheat;
+  margin-top: 0.5rem;
 }
 
-.weatherLocation button {
-  background: linear-gradient(to right, rgb(56, 189, 248), rgb(103, 232, 249));
+.img {
+  width: 100%;
+  border-radius: 20px;
+  margin-top: 2rem;
 }
 
-.img{
-    position: absolute;
-    top: 30px;
-    right: 0px;
-     height: 400px;
-    width: 500px;
-    border-radius: 20px;
-    margin-top: 118px;
+.imageWrapper {
+  text-align: center;
+}
+
+.error {
+  color: red;
+  text-align: center;
+  margin-top: 1rem;
+  font-weight: bold;
 }
